:white_check_mark: Add login test case (#388)
